prod-contents/unpackaged/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>SVMXC__Break_Time_Total__c</fullName>
        <description>This is the total time of all breaks taken during the service. There could be multiple breaks taken during the service.</description>
        <inlineHelpText>This is the total time of all breaks taken during the service. There could be multiple breaks taken during the service.</inlineHelpText>
        <label>Total Break Time (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Driving_Time_Home__c</fullName>
        <description>Driving or travel time to get back to the technician&apos;s home base from the last work order location for the day or working shift.</description>
        <inlineHelpText>Driving or travel time to get back to the technician&apos;s home base from the last work order location for the day or working shift.</inlineHelpText>
        <label>Travel Time Back to Home Base (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Driving_Time__c</fullName>
        <description>Driving or travel time to this work order location from the last work order location or from the home base.</description>
        <inlineHelpText>Driving or travel time to this work order location from the last work order location or from the home base.</inlineHelpText>
        <label>Travel Time to Workorder Location (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Overhead_Time_After__c</fullName>
        <description>Total overhead or flex time at the end of the service at the work order location.</description>
        <inlineHelpText>Total overhead or flex time at the end of the service at the work order location.</inlineHelpText>
        <label>Overhead Time at End of the Job (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Overhead_Time_Before__c</fullName>
        <description>Total overhead or flex time before the start of the actual service at the work order location.</description>
        <inlineHelpText>Total overhead or flex time before the start of the actual service at the work order location.</inlineHelpText>
        <label>Overhead Time at Start of the Job (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Idle_Time__c</fullName>
        <description>Idle time before the start of the actual service at the work order location.</description>
        <inlineHelpText>Idle time before the start of the actual service at the work order location.</inlineHelpText>
        <label>Idle Time for the Job (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Latitude__c</fullName>
        <description>This field is created to store the latitude of the non work order events of the technicians.</description>
        <inlineHelpText>This field is created to store the latitude of the non work order events of the technicians.</inlineHelpText>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Longitude__c</fullName>
        <description>This field is created to store the longitude of the non work order events of the technicians.</description>
        <inlineHelpText>This field is created to store the longitude of the non work order events of the technicians.</inlineHelpText>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Optimizer_Message_Creation_Date_Time__c</fullName>
        <description>This field is used to store the date and time of the message generated by the external optimization system that is successfully processed in ServiceMax . The date and time stamp is when the message was created by the external optimization system and sent to ServiceMax.</description>
        <label>Optimizer Message Creation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Status__c</fullName>
        <description>This field is used to store scheduling status</description>
        <inlineHelpText>This field is used to store scheduling status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Duration__c</fullName>
        <description>Total service time, which is the wrench time of the service</description>
        <inlineHelpText>Total service time or the wrench time of the service.</inlineHelpText>
        <label>Service Time (in Seconds)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>